2005-04-19  Richard Hult  <richard@imendio.com>

	* data/ui/gantt-view.ui:
	* data/ui/main-window.ui:
	* data/ui/resource-view.ui:
	* data/ui/task-view.ui:
	* data/ui/time-table-view.ui: Fix up view placeholders.
	
	* data/stylesheets/msp2planner.xsl: Map task types more correctly.

	* src/planner-resource-view.c (resource_view_edit_columns_cb): Fix
	typo.

2005-04-18  Richard Hult  <richard@imendio.com>

	* src/planner-window.c (window_populate): Don't hide the Actions
	menu when its's empty.

	* data/ui/*.ui: Clean up some.

2005-04-17  Richard Hult  <richard@imendio.com>

	Work on getting the Python bindings uptodate.
	
	* libplanner/Makefile.am: Link the modules with libplanner.

	* python/Makefile.am: Split up the module in one for libplanner
	and one for the UI plugins.

	* python/test.py: Make it work.
	* python/python-demo.py: Likewise.

	* src/*.[ch]: Fix type macro for PlannerWindow.

	* src/planner-python-plugin.c: Clean up coding style and import
	the new ui module. Set the application as a global for scripts to
	use.

2005-04-18  Richard Hult  <richard@imendio.com>

	* libplanner/Makefile.am:
	* src/Makefile.am: Fix build.

2005-04-16  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-old-xml.c (mrp_old_xml_parse): Align the start
	time to the start of the day, fixes bug #172292.

	* autogen.sh:
	* data/Makefile.am:
	* libplanner/Makefile.am:
	* libplanner/mrp-marshal-main.c:
	* python/Makefile.am:
	* src/Makefile.am:
	* src/planner-marshal-main.c:
	* src/planner-usage-view.c: Clean up and build.

2005-04-16  Richard Hult  <richard@imendio.com>

	* src/planner-usage-*: Rename from planner-ttable-*.

	* src/Makefile.am: Reorganize views and make them
	builtin. Simplify a lot.

	* src/planner-gantt-view.[ch]:
	* src/planner-resource-view.[ch]:
	* src/planner-ttable-view.[ch]:
	* src/planner-task-view.[ch]: Adapt to the new view interface.

	* src/planner-ttable-*: s/ttable/usage/.

	* src/planner-view-loader.[ch]: